Update travis and readme